tests/fixtures/invalid/pow_bytes_none_float.py
# Cannot call pow() with Bytes, None, Float
x = pow(b"hello", None, 1.0)
